--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,3 +42,10 @@ android {
 flutter {
     source = "../.."
 }
+
+// vo hieu hoa auto-test
+testOptions {
+    unitTests.all {
+        it.enabled = false
+    }
+}
